Rebrand: Rename theme to Liquid Bl4ck

--- a/swayosd.css
+++ b/swayosd.css
@@ -1,4 +1,4 @@
-/* Liquid Crystal Theme - SwayOSD CSS Variables */
+/* Liquid Bl4ck Theme - SwayOSD CSS Variables */
 
 @define-color background-color #1a1a22;
 @define-color border-color #0096ff;
