--- a/walker.css
+++ b/walker.css
@@ -1,4 +1,4 @@
-/* Liquid Crystal Theme - Walker styles */
+/* Liquid Bl4ck Theme - Walker styles */
 
 /* Color variables for GTK apps (NotNative, etc.) */
 @define-color base #1a1a22;
